--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
     repositories {
         jcenter()
         maven {
-            url "https://dl.bintray.com/minhnn2607/seekbar"
+            url "https://dl.bintray.com/minhnn2607/maven"
         }
         maven {
             url 'https://maven.google.com/'
